# Agent_K

./: .gitignore  AI_DEBT.md  README.md  pyproject.toml
.codex/skills/agent-k/: SKILL.md
agent_k/: __init__.py  __main__.py
src/agent_k/: __init__.py  api.py  cli.py  models.py  openclaw.py  openclaw_capture.py  openclaw_evaluator.py  openclaw_models.py  openclaw_report_json.py  openclaw_report_markdown.py  openclaw_store.py  profiles.py  report_json.py  report_markdown.py  runner.py  scenarios.py  text_utils.py  trace_collector.py
src/agent_k/agents/: __init__.py  base.py  manatuabon.py  ollama.py
src/agent_k/scoring/: __init__.py  aggregator.py  attack_resistance.py  citations.py  common.py  confidence_calibration.py  consistency.py  instruction_adherence.py  pii.py  scope_discipline.py  severity.py  sycophancy.py  tool_arguments.py  tool_evidence.py
tests/: conftest.py  test_manatuabon_runner.py  test_ollama_runner.py  test_openclaw_integration.py  test_reports.py  test_runner.py  test_scoring.py
